# bluetoothctl546_experiments

./: CMakeLists.txt  README.md
client/: advertising.c  agent.c  gatt.c  main.c
